force-app/main/default/objects/leaseworks__Derate_Adjustment__c/leaseworks__Derate_Adjustment__c.object-meta.xml
<CustomObject>
    <description>Nestled within the Ratio Table is a three-dimensional &quot;Interpolation Adjustment&quot; table. This table pinpoints the exact Maintenance Reserve Rate for any combination of engine usage (Hours/Cycles ratio) and adjustment factors (Derate).</description>
    <label>Interpolation Adjustment</label>
    <nameField>
        <label>Ratio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interpolation Adjustments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>