force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Derate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Derate_Percentage__c</fullName>
    <inlineHelpText>If Dearate is not set by Lease Agreement, set 0%</inlineHelpText>
    <label>Derate Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>