force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Dollars_per_Flight_Hour__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Dollars_per_Flight_Hour__c</fullName>
    <description>User entered rate, determined for the respective ratio and derate percentage for the MR calculation.</description>
    <inlineHelpText>User entered rate, determined for the respective ratio and derate percentage for the MR calculation.</inlineHelpText>
    <label>Rate</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>