force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__FH_To_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__FH_To_FC_Ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The user inputs the FH to FC ratio value, which is then used to define the rate for each ratio and applied in the MR interpolation calculation. The default value for this field is set to 0, but the user can update it for the FH to FC ratio rate basis.</description>
    <inlineHelpText>The user inputs the FH to FC ratio value, which is then used to define the rate for each ratio and applied in the MR interpolation calculation.</inlineHelpText>
    <label>FH To FC Ratio</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>