force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Flight_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Flight_Value__c</fullName>
    <description>Field to store Fight Hours or Flight Cycle value based on Rate Basis</description>
    <formula>IF( leaseworks__Rate_Basis__c =&#39;Flight Hours&#39;, leaseworks__Flight_Hours__c , IF(leaseworks__Rate_Basis__c =&#39;Flight Cycles&#39;, leaseworks__Flight_Cycles__c ,null) )</formula>
    <label>_Flight Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>