force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Interpolation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interpolation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If interpolation applicable per lease, tick this box to calculate a rate between two ratios in the ratio table.</inlineHelpText>
    <label>Interpolation?</label>
    <type>Checkbox</type>
</CustomField>