force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Interpolation_Adjustment_External_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interpolation_Adjustment_External_Id__c</fullName>
    <description>External ID used for the integration.</description>
    <externalId>true</externalId>
    <label>Interpolation Adjustment ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>