force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__NamingConventionCheck__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__NamingConventionCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>We have to apply the new naming convention or not</description>
    <label>_NamingConventionCheck</label>
    <type>Checkbox</type>
</CustomField>