force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Rate_Basis__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rate_Basis__c</fullName>
    <description>Automatically replicates the rate basis from the parent MR rate record.</description>
    <formula>TEXT(leaseworks__Ratio_Table__r.leaseworks__Rate_Basis__c)</formula>
    <inlineHelpText>Automatically replicates the rate basis from the parent MR rate record.</inlineHelpText>
    <label>Rate Basis</label>
    <type>Text</type>
</CustomField>