force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Table__c</fullName>
    <description>The MR Rate table to which this matrix record belong to.</description>
    <inlineHelpText>The MR Rate table to which this matrix record belong to.</inlineHelpText>
    <label>Ratio/Matrix Table</label>
    <referenceTo>leaseworks__Ratio_Table__c</referenceTo>
    <relationshipLabel>Interpolation / Matrix Rate</relationshipLabel>
    <relationshipName>Derate_Adjustments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>