force-app/main/default/objects/leaseworks__Derate_Adjustment__c/fields/leaseworks__Y_Hidden_Dollars_Per_Flight_Unit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Dollars_Per_Flight_Unit__c</fullName>
    <description>for internal usages. Since this is a formula field it will return 0 for null case.</description>
    <formula>leaseworks__Dollars_per_Flight_Hour__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>_Dollars Per Flight Unit</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>