force-app/main/default/objects/leaseworks__Derate_Adjustment__c/validationRules/leaseworks__RateBasisValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__RateBasisValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF( TEXT(leaseworks__Ratio_Table__r.leaseworks__Rate_Basis__c) =&#39;Flight Hours&#39;,  OR(ISNULL(leaseworks__Flight_Hours__c), ISBLANK(leaseworks__Flight_Hours__c) ) , IF(TEXT(leaseworks__Ratio_Table__r.leaseworks__Rate_Basis__c) =&#39;Flight Cycles&#39;,  OR(ISNULL( leaseworks__Flight_Cycles__c ), ISBLANK(leaseworks__Flight_Cycles__c )) , false  ))</errorConditionFormula>
    <errorMessage>The Flight Hours / Flight Cycles fields must be entered if the corresponding Rate Basis is selected on the parent record.</errorMessage>
</ValidationRule>